# quax-blocks

./: .git-blame-ignore-revs  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build_docs.yml  cd.yml  ci.yml  copilot-setup-steps.yml  labeler.yml  ossar.yml  sync-labels.yml  weekly.yml
docs/: index.md
docs/api/: quax_blocks.md
docs/guides/: getting_started.md  mixins.md
src/quax_blocks/: __init__.py
src/quax_blocks/_src/: _compat.py  binary.py  container.py  copy.py  example.py  rich.py  round.py  unary.py
tests/: test_operators.py  test_package.py  test_quaxed_names.py
